--- a/Dvdstore/WebContent/WEB-INF/web.xml
+++ b/Dvdstore/WebContent/WEB-INF/web.xml
@@ -4,13 +4,13 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
    <servlet>
-     <servlet-name>dispatcher</servlet-name>
+     <servlet-name>dvdstore</servlet-name>
      <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>     
      <load-on-startup>1</load-on-startup>
    </servlet>
 
  <servlet-mapping>
-  <servlet-name>dispatcher</servlet-name>
+  <servlet-name>dvdstore</servlet-name>
   <url-pattern>*.html</url-pattern>
  </servlet-mapping>
 
